# scorep_plugin_ibmpowernv

./: AUTHORS  CMakeLists.txt  README.md
doc/: architecture.md  occ.md
include/: occ.hpp  occ_sensor_t.hpp  occ_util.hpp  plugin.hpp  plugin_sync.hpp  util.hpp
src/: occ.cpp  occ_sensor_t.cpp  occ_util.cpp  plugin.cpp  plugin_sync.cpp  util.cpp
